--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "calendaranalytics",
+  "name": "react-big-calendar-bar-graph",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
-    "@testing-library/user-event": "^13.5.0",
+    "@reduxjs/toolkit": "^2.11.2",
+    "moment": "^2.30.1",
     "react": "^19.2.3",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.3",
+    "react-modal": "^3.16.3",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.6.0",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -20,8 +23,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -35,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
